223		Added Roman Empire mapping to country_mappings
224		Added favored unit variable to Country class
225		Merged changes
226		block some additional nations that can be created by EU3 decision.
227		Minor improvements to country mappings
228		A little bit of refactoring, and being unable to open common/* directories is not a fatal error for pre-1.06 installs.
229		fix error message.
230		Add title merging function and options.
231		Get primary titles and use them as the primary merge target for title merging.
232		Remove a shadowed variable that prevented manpower from being considered for culture mapping.
233		Update changelog with latest changes.
234		Update test configs with the title merging options
235		Make log slightly easier to read
236		Cores and HRE membership added for de jure relationships
237		Upadted province mappings in Spain
238		Add new test saves
239		Update test configurations
240		Update culture and religion mappings
241		Add EU3 diplomacy
242		Defer Mapping countries until last moment (breaks province discovery)
243		Update localization text for converter mod
244		Fix province discovery for land provinces
245		Fix crash bug if religions tie in a province
246		Don't allow advisors to try to insert new provinces
247		Fix crash bug from last change
248		Add changes for CK2Plus to EU3
249		Read in spouses.  Convert diplomatic agreements (PUs, RMs, Alliances).
250		Defer determination of a nation being independent
251		Merge
252		Finish functional merge between title-merging and coring.  Both seem to be working OK now.
253		Fix discovery of sea provinces by converted nations.
254		For cleanliness, map a little deeper into Morocco and Egypt.
255		Convert advisors after tag mapping.  Cap advisor skill at 6 (7 breaks EU3).
		Set advisor start date to 16 years after their birth, rather than 16 years after game start.
256		Vassal independence (blobifying still happens due to too many tags)